examples/test/testpolicy9182.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9182
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key7: value26
      key40: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value6
          key49: value10
          key42: value15
      podSelector:
        matchLabels:
          key5: value35
